--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3000 next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migration": "dotenv -e .env.local -- npx prisma migrate dev",
+    "generate": "dotenv -e .env.local -- npx prisma generate",
+    "studio": "dotenv -e .env.local -- npx prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.10",
+    "@prisma/client": "5.5.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
+    "next-auth": "^4.24.4",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,5 +34,9 @@
     "typescript": "5.2.2",
     "zod": "^3.21.4",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "dotenv-cli": "^7.3.0",
+    "prisma": "^5.5.2"
   }
 }
