--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=3000 next dev",
+    "dev": "VERCEL='' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migration": "dotenv -e .env.local -- npx prisma migrate dev",
-    "generate": "dotenv -e .env.local -- npx prisma generate",
-    "studio": "dotenv -e .env.local -- npx prisma studio"
+    "db:migrate": "dotenv -e .env.local -- pnpm dlx prisma migrate dev",
+    "db:generate": "dotenv -e .env.local -- pnpm dlx prisma generate",
+    "db:studio": "dotenv -e .env.local -- pnpm dlx prisma studio",
+    "db:pull": "dotenv -e .env.local -- pnpm dlx prisma db pull"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
