--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:migrate": "dotenv -e .env.local -- pnpm dlx prisma migrate dev",
     "db:generate": "dotenv -e .env.local -- pnpm dlx prisma generate",
     "db:studio": "dotenv -e .env.local -- pnpm dlx prisma studio",
-    "db:pull": "dotenv -e .env.local -- pnpm dlx prisma db pull"
+    "db:pull": "dotenv -e .env.local -- pnpm dlx prisma db pull",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -34,10 +35,10 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zod": "^3.21.4",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "prisma": "^5.5.2"
   },
   "devDependencies": {
-    "dotenv-cli": "^7.3.0",
-    "prisma": "^5.5.2"
+    "dotenv-cli": "^7.3.0"
   }
 }
