--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "next-auth": "^4.24.4",
     "postcss": "8.4.29",
+    "prisma": "^5.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zod": "^3.21.4",
-    "zustand": "^4.4.1",
-    "prisma": "^5.5.2"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "dotenv-cli": "^7.3.0"
